<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ufc.opennebula.OpcoesActivity$PlaceholderFragment"
    android:background="#1E90FF" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
            android:id="@+id/cloud2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/cloud2" />
        
    </FrameLayout>
    
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addmv"
        android:onClick="addMV"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@layout/botao_azul"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="#FFFFFF"
         />
    
        <Button
            android:id="@+id/button2"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:onClick="listarMVs"
            android:text="@string/listarmv"
            android:layout_marginBottom="10dp"
            android:background="@layout/botao_azul"
            android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button3"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:text="@string/sair"
        android:onClick="sair"
        android:layout_marginBottom="10dp"
        android:background="@layout/botao_azul"
        android:textColor="#FFFFFF"/>

</LinearLayout>
